test/conformance/chainsaw/validate/clusterpolicy/standard/psa(deprecated)/seccomp-latest-check-no-exclusion/policy-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: latest-check-no-exclusion
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
