test/conformance/chainsaw/validate/clusterpolicy/standard/psa(deprecated)/seccomp-latest-check-no-exclusion/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: seccomp-latest-check-no-exclusion
spec:
  steps:
  - name: step-01
    try:
    - apply:
        file: policy.yaml
    - assert:
        file: policy-assert.yaml
  - name: step-02
    try:
    - apply:
        expect:
        - check:
            ($error != null): true
        file: bad-pod-1.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: bad-pod-2.yaml
    - apply:
        file: good-pod.yaml
